# swagger_server/swagger/swagger.yaml
@@ -94,7 +94,6 @@ components:
       required:
       - first_name
       - last_name
-      - student_id
       properties:
         student_id:
           type: integer
@@ -103,7 +102,7 @@ components:
           type: string
         last_name:
           type: string
-        grade_record:
+        grade_records:
           type: array
           items:
             $ref: '#/components/schemas/GradeRecords'
@@ -111,7 +110,7 @@ components:
         student_id: 123456
         first_name: Pietje
         last_name: Bell
-        grade_record:
+        grade_records:
         - subject_name: maths
           grade: 7
         - subject_name: biology
